[package]
name = "l3-llvm-backend"
version = "0.1.0"
authors = ["Georg Schmid <georg.schmid@epfl.ch>"]
edition = "2018"

[lib]
name = "l3_llvm_backend"
path = "src/lib.rs"

[[bin]]
name = "l3jit"
path = "src/bin/l3jit.rs"

[[test]]
name = "run_tests"
path = "src/tests/run_tests.rs"

[dependencies]
l3_llvm_runtime = { path = "runtime" }
pest = "2.1.3"
pest_derive = "2.1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm6-0" }

[dev-dependencies]
assert_cmd = "1.0.1"
